lang/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Wft
Rule 1     Wft -> AtomicWft
Rule 2     Wft -> Y_WftNode
Rule 3     Wft -> LParen Function Arguments RParen
Rule 4     Wft -> LParen BinaryOp Argument Argument RParen
Rule 5     Wft -> LParen NaryOp Wfts RParen
Rule 6     Wft -> LParen Param2Op Wft Wfts RParen
Rule 7     Wft -> LParen Param1Op Wft Wfts RParen
Rule 8     Wft -> LParen Y_Close AtomicNameSet Wft RParen
Rule 9     Wft -> LParen Y_Every AtomicName Wfts RParen
Rule 10    Wft -> LParen SomeCondition Wfts RParen
Rule 11    Wft -> LParen QIdentifier Wfts RParen
Rule 12    BinaryOp -> Y_Impl
Rule 13    NaryOp -> Y_And
Rule 14    NaryOp -> Y_Or
Rule 15    NaryOp -> Y_Not
Rule 16    NaryOp -> Y_Nor
Rule 17    NaryOp -> Y_Thnot
Rule 18    NaryOp -> Y_Thnor
Rule 19    NaryOp -> Y_Nand
Rule 20    NaryOp -> Y_Xor
Rule 21    NaryOp -> Y_DoubImpl
Rule 22    Param2Op -> Y_AndOr LParen Y_Integer Y_Integer RParen
Rule 23    Param2Op -> Y_Thresh LParen Y_Integer Y_Integer RParen
Rule 24    Param1Op -> Y_Thresh LParen Y_Integer RParen
Rule 25    AtomicWft -> AtomicName
Rule 26    AtomicWft -> Y_String
Rule 27    AtomicWft -> Y_Integer
Rule 28    AtomicName -> Y_Identifier
Rule 29    Function -> Wft
Rule 30    Argument -> Wft
Rule 31    Argument -> None
Rule 32    Argument -> LParen ArgumentFunction Wfts RParen
Rule 33    ArgumentFunction -> Y_SetOf
Rule 34    Wfts -> <empty>
Rule 35    Wfts -> Wfts Wft
Rule 36    Arguments -> Argument
Rule 37    Arguments -> Arguments Argument
Rule 38    AtomicNameSet -> AtomicName
Rule 39    AtomicNameSet -> LParen AtomicName AtomicNames RParen
Rule 40    AtomicNames -> <empty>
Rule 41    AtomicNames -> AtomicName AtomicNames
Rule 42    SomeCondition -> Y_Some AtomicName LParen Wfts RParen
Rule 43    Y_String -> String
Rule 44    Y_Integer -> Integer
Rule 45    Y_Impl -> Impl
Rule 46    Y_Or -> Or
Rule 47    Y_Not -> Not
Rule 48    Y_Nor -> Nor
Rule 49    Y_Thnot -> Thnot
Rule 50    Y_Thnor -> Thnor
Rule 51    Y_Nand -> Nand
Rule 52    Y_Xor -> Xor
Rule 53    Y_DoubImpl -> DoubImpl
Rule 54    Y_AndOr -> AndOr
Rule 55    Y_Thresh -> Thresh
Rule 56    Y_SetOf -> SetOf
Rule 57    Y_Every -> Every
Rule 58    Y_Some -> Some
Rule 59    Y_Close -> Close
Rule 60    Y_And -> And
Rule 61    Y_WftNode -> WftNode
Rule 62    Y_QIdentifier -> QIdentifier
Rule 63    Y_Identifier -> Identifier

Terminals, with rules where they appear

And                  : 60
AndOr                : 54
Close                : 59
DoubImpl             : 53
Every                : 57
Identifier           : 63
Impl                 : 45
Integer              : 44
LParen               : 3 4 5 6 7 8 9 10 11 22 23 24 32 39 42
Nand                 : 51
None                 : 31
Nor                  : 48
Not                  : 47
Or                   : 46
QIdentifier          : 11 62
RParen               : 3 4 5 6 7 8 9 10 11 22 23 24 32 39 42
SetOf                : 56
Some                 : 58
String               : 43
Thnor                : 50
Thnot                : 49
Thresh               : 55
WftNode              : 61
Xor                  : 52
error                : 

Nonterminals, with rules where they appear

Argument             : 4 4 36 37
ArgumentFunction     : 32
Arguments            : 3 37
AtomicName           : 9 25 38 39 41 42
AtomicNameSet        : 8
AtomicNames          : 39 41
AtomicWft            : 1
BinaryOp             : 4
Function             : 3
NaryOp               : 5
Param1Op             : 7
Param2Op             : 6
SomeCondition        : 10
Wft                  : 6 7 8 29 30 35 0
Wfts                 : 5 6 7 9 10 11 32 35 42
Y_And                : 13
Y_AndOr              : 22
Y_Close              : 8
Y_DoubImpl           : 21
Y_Every              : 9
Y_Identifier         : 28
Y_Impl               : 12
Y_Integer            : 22 22 23 23 24 27
Y_Nand               : 19
Y_Nor                : 16
Y_Not                : 15
Y_Or                 : 14
Y_QIdentifier        : 
Y_SetOf              : 33
Y_Some               : 42
Y_String             : 26
Y_Thnor              : 18
Y_Thnot              : 17
Y_Thresh             : 23 24
Y_WftNode            : 2
Y_Xor                : 20

Parsing method: LALR

state 0

    (0) S' -> . Wft
    (1) Wft -> . AtomicWft
    (2) Wft -> . Y_WftNode
    (3) Wft -> . LParen Function Arguments RParen
    (4) Wft -> . LParen BinaryOp Argument Argument RParen
    (5) Wft -> . LParen NaryOp Wfts RParen
    (6) Wft -> . LParen Param2Op Wft Wfts RParen
    (7) Wft -> . LParen Param1Op Wft Wfts RParen
    (8) Wft -> . LParen Y_Close AtomicNameSet Wft RParen
    (9) Wft -> . LParen Y_Every AtomicName Wfts RParen
    (10) Wft -> . LParen SomeCondition Wfts RParen
    (11) Wft -> . LParen QIdentifier Wfts RParen
    (25) AtomicWft -> . AtomicName
    (26) AtomicWft -> . Y_String
    (27) AtomicWft -> . Y_Integer
    (61) Y_WftNode -> . WftNode
    (28) AtomicName -> . Y_Identifier
    (43) Y_String -> . String
    (44) Y_Integer -> . Integer
    (63) Y_Identifier -> . Identifier

    LParen          shift and go to state 4
    WftNode         shift and go to state 8
    String          shift and go to state 10
    Integer         shift and go to state 11
    Identifier      shift and go to state 12

    Wft                            shift and go to state 1
    AtomicWft                      shift and go to state 2
    Y_WftNode                      shift and go to state 3
    AtomicName                     shift and go to state 5
    Y_String                       shift and go to state 6
    Y_Integer                      shift and go to state 7
    Y_Identifier                   shift and go to state 9

state 1

    (0) S' -> Wft .



state 2

    (1) Wft -> AtomicWft .

    $end            reduce using rule 1 (Wft -> AtomicWft .)
    None            reduce using rule 1 (Wft -> AtomicWft .)
    LParen          reduce using rule 1 (Wft -> AtomicWft .)
    WftNode         reduce using rule 1 (Wft -> AtomicWft .)
    String          reduce using rule 1 (Wft -> AtomicWft .)
    Integer         reduce using rule 1 (Wft -> AtomicWft .)
    Identifier      reduce using rule 1 (Wft -> AtomicWft .)
    RParen          reduce using rule 1 (Wft -> AtomicWft .)


state 3

    (2) Wft -> Y_WftNode .

    $end            reduce using rule 2 (Wft -> Y_WftNode .)
    None            reduce using rule 2 (Wft -> Y_WftNode .)
    LParen          reduce using rule 2 (Wft -> Y_WftNode .)
    WftNode         reduce using rule 2 (Wft -> Y_WftNode .)
    String          reduce using rule 2 (Wft -> Y_WftNode .)
    Integer         reduce using rule 2 (Wft -> Y_WftNode .)
    Identifier      reduce using rule 2 (Wft -> Y_WftNode .)
    RParen          reduce using rule 2 (Wft -> Y_WftNode .)


state 4

    (3) Wft -> LParen . Function Arguments RParen
    (4) Wft -> LParen . BinaryOp Argument Argument RParen
    (5) Wft -> LParen . NaryOp Wfts RParen
    (6) Wft -> LParen . Param2Op Wft Wfts RParen
    (7) Wft -> LParen . Param1Op Wft Wfts RParen
    (8) Wft -> LParen . Y_Close AtomicNameSet Wft RParen
    (9) Wft -> LParen . Y_Every AtomicName Wfts RParen
    (10) Wft -> LParen . SomeCondition Wfts RParen
    (11) Wft -> LParen . QIdentifier Wfts RParen
    (29) Function -> . Wft
    (12) BinaryOp -> . Y_Impl
    (13) NaryOp -> . Y_And
    (14) NaryOp -> . Y_Or
    (15) NaryOp -> . Y_Not
    (16) NaryOp -> . Y_Nor
    (17) NaryOp -> . Y_Thnot
    (18) NaryOp -> . Y_Thnor
    (19) NaryOp -> . Y_Nand
    (20) NaryOp -> . Y_Xor
    (21) NaryOp -> . Y_DoubImpl
    (22) Param2Op -> . Y_AndOr LParen Y_Integer Y_Integer RParen
    (23) Param2Op -> . Y_Thresh LParen Y_Integer Y_Integer RParen
    (24) Param1Op -> . Y_Thresh LParen Y_Integer RParen
    (59) Y_Close -> . Close
    (57) Y_Every -> . Every
    (42) SomeCondition -> . Y_Some AtomicName LParen Wfts RParen
    (1) Wft -> . AtomicWft
    (2) Wft -> . Y_WftNode
    (3) Wft -> . LParen Function Arguments RParen
    (4) Wft -> . LParen BinaryOp Argument Argument RParen
    (5) Wft -> . LParen NaryOp Wfts RParen
    (6) Wft -> . LParen Param2Op Wft Wfts RParen
    (7) Wft -> . LParen Param1Op Wft Wfts RParen
    (8) Wft -> . LParen Y_Close AtomicNameSet Wft RParen
    (9) Wft -> . LParen Y_Every AtomicName Wfts RParen
    (10) Wft -> . LParen SomeCondition Wfts RParen
    (11) Wft -> . LParen QIdentifier Wfts RParen
    (45) Y_Impl -> . Impl
    (60) Y_And -> . And
    (46) Y_Or -> . Or
    (47) Y_Not -> . Not
    (48) Y_Nor -> . Nor
    (49) Y_Thnot -> . Thnot
    (50) Y_Thnor -> . Thnor
    (51) Y_Nand -> . Nand
    (52) Y_Xor -> . Xor
    (53) Y_DoubImpl -> . DoubImpl
    (54) Y_AndOr -> . AndOr
    (55) Y_Thresh -> . Thresh
    (58) Y_Some -> . Some
    (25) AtomicWft -> . AtomicName
    (26) AtomicWft -> . Y_String
    (27) AtomicWft -> . Y_Integer
    (61) Y_WftNode -> . WftNode
    (28) AtomicName -> . Y_Identifier
    (43) Y_String -> . String
    (44) Y_Integer -> . Integer
    (63) Y_Identifier -> . Identifier

    QIdentifier     shift and go to state 22
    Close           shift and go to state 35
    Every           shift and go to state 36
    LParen          shift and go to state 4
    Impl            shift and go to state 38
    And             shift and go to state 39
    Or              shift and go to state 40
    Not             shift and go to state 41
    Nor             shift and go to state 42
    Thnot           shift and go to state 43
    Thnor           shift and go to state 44
    Nand            shift and go to state 45
    Xor             shift and go to state 46
    DoubImpl        shift and go to state 47
    AndOr           shift and go to state 48
    Thresh          shift and go to state 49
    Some            shift and go to state 50
    WftNode         shift and go to state 8
    String          shift and go to state 10
    Integer         shift and go to state 11
    Identifier      shift and go to state 12

    Function                       shift and go to state 13
    BinaryOp                       shift and go to state 14
    NaryOp                         shift and go to state 15
    Param2Op                       shift and go to state 16
    Wft                            shift and go to state 17
    Param1Op                       shift and go to state 18
    Y_Close                        shift and go to state 19
    Y_Every                        shift and go to state 20
    AtomicName                     shift and go to state 5
    SomeCondition                  shift and go to state 21
    Y_Impl                         shift and go to state 23
    Y_And                          shift and go to state 24
    Y_Or                           shift and go to state 25
    Y_Not                          shift and go to state 26
    Y_Nor                          shift and go to state 27
    Y_Thnot                        shift and go to state 28
    Y_Thnor                        shift and go to state 29
    Y_Nand                         shift and go to state 30
    Y_Xor                          shift and go to state 31
    Y_DoubImpl                     shift and go to state 32
    Y_AndOr                        shift and go to state 33
    Y_Integer                      shift and go to state 7
    Y_Thresh                       shift and go to state 34
    Y_Some                         shift and go to state 37
    AtomicWft                      shift and go to state 2
    Y_WftNode                      shift and go to state 3
    Y_String                       shift and go to state 6
    Y_Identifier                   shift and go to state 9

state 5

    (25) AtomicWft -> AtomicName .

    $end            reduce using rule 25 (AtomicWft -> AtomicName .)
    None            reduce using rule 25 (AtomicWft -> AtomicName .)
    LParen          reduce using rule 25 (AtomicWft -> AtomicName .)
    WftNode         reduce using rule 25 (AtomicWft -> AtomicName .)
    String          reduce using rule 25 (AtomicWft -> AtomicName .)
    Integer         reduce using rule 25 (AtomicWft -> AtomicName .)
    Identifier      reduce using rule 25 (AtomicWft -> AtomicName .)
    RParen          reduce using rule 25 (AtomicWft -> AtomicName .)


state 6

    (26) AtomicWft -> Y_String .

    $end            reduce using rule 26 (AtomicWft -> Y_String .)
    None            reduce using rule 26 (AtomicWft -> Y_String .)
    LParen          reduce using rule 26 (AtomicWft -> Y_String .)
    WftNode         reduce using rule 26 (AtomicWft -> Y_String .)
    String          reduce using rule 26 (AtomicWft -> Y_String .)
    Integer         reduce using rule 26 (AtomicWft -> Y_String .)
    Identifier      reduce using rule 26 (AtomicWft -> Y_String .)
    RParen          reduce using rule 26 (AtomicWft -> Y_String .)


state 7

    (27) AtomicWft -> Y_Integer .

    $end            reduce using rule 27 (AtomicWft -> Y_Integer .)
    None            reduce using rule 27 (AtomicWft -> Y_Integer .)
    LParen          reduce using rule 27 (AtomicWft -> Y_Integer .)
    WftNode         reduce using rule 27 (AtomicWft -> Y_Integer .)
    String          reduce using rule 27 (AtomicWft -> Y_Integer .)
    Integer         reduce using rule 27 (AtomicWft -> Y_Integer .)
    Identifier      reduce using rule 27 (AtomicWft -> Y_Integer .)
    RParen          reduce using rule 27 (AtomicWft -> Y_Integer .)


state 8

    (61) Y_WftNode -> WftNode .

    $end            reduce using rule 61 (Y_WftNode -> WftNode .)
    None            reduce using rule 61 (Y_WftNode -> WftNode .)
    LParen          reduce using rule 61 (Y_WftNode -> WftNode .)
    WftNode         reduce using rule 61 (Y_WftNode -> WftNode .)
    String          reduce using rule 61 (Y_WftNode -> WftNode .)
    Integer         reduce using rule 61 (Y_WftNode -> WftNode .)
    Identifier      reduce using rule 61 (Y_WftNode -> WftNode .)
    RParen          reduce using rule 61 (Y_WftNode -> WftNode .)


state 9

    (28) AtomicName -> Y_Identifier .

    $end            reduce using rule 28 (AtomicName -> Y_Identifier .)
    None            reduce using rule 28 (AtomicName -> Y_Identifier .)
    LParen          reduce using rule 28 (AtomicName -> Y_Identifier .)
    WftNode         reduce using rule 28 (AtomicName -> Y_Identifier .)
    String          reduce using rule 28 (AtomicName -> Y_Identifier .)
    Integer         reduce using rule 28 (AtomicName -> Y_Identifier .)
    Identifier      reduce using rule 28 (AtomicName -> Y_Identifier .)
    RParen          reduce using rule 28 (AtomicName -> Y_Identifier .)


state 10

    (43) Y_String -> String .

    $end            reduce using rule 43 (Y_String -> String .)
    None            reduce using rule 43 (Y_String -> String .)
    LParen          reduce using rule 43 (Y_String -> String .)
    WftNode         reduce using rule 43 (Y_String -> String .)
    String          reduce using rule 43 (Y_String -> String .)
    Integer         reduce using rule 43 (Y_String -> String .)
    Identifier      reduce using rule 43 (Y_String -> String .)
    RParen          reduce using rule 43 (Y_String -> String .)


state 11

    (44) Y_Integer -> Integer .

    $end            reduce using rule 44 (Y_Integer -> Integer .)
    None            reduce using rule 44 (Y_Integer -> Integer .)
    LParen          reduce using rule 44 (Y_Integer -> Integer .)
    WftNode         reduce using rule 44 (Y_Integer -> Integer .)
    String          reduce using rule 44 (Y_Integer -> Integer .)
    Integer         reduce using rule 44 (Y_Integer -> Integer .)
    Identifier      reduce using rule 44 (Y_Integer -> Integer .)
    RParen          reduce using rule 44 (Y_Integer -> Integer .)


state 12

    (63) Y_Identifier -> Identifier .

    $end            reduce using rule 63 (Y_Identifier -> Identifier .)
    None            reduce using rule 63 (Y_Identifier -> Identifier .)
    LParen          reduce using rule 63 (Y_Identifier -> Identifier .)
    WftNode         reduce using rule 63 (Y_Identifier -> Identifier .)
    String          reduce using rule 63 (Y_Identifier -> Identifier .)
    Integer         reduce using rule 63 (Y_Identifier -> Identifier .)
    Identifier      reduce using rule 63 (Y_Identifier -> Identifier .)
    RParen          reduce using rule 63 (Y_Identifier -> Identifier .)


state 13

    (3) Wft -> LParen Function . Arguments RParen
    (36) Arguments -> . Argument
    (37) Arguments -> . Arguments Argument
    (30) Argument -> . Wft
    (31) Argument -> . None
    (32) Argument -> . LParen ArgumentFunction Wfts RParen
    (1) Wft -> . AtomicWft
    (2) Wft -> . Y_WftNode
    (3) Wft -> . LParen Function Arguments RParen
    (4) Wft -> . LParen BinaryOp Argument Argument RParen
    (5) Wft -> . LParen NaryOp Wfts RParen
    (6) Wft -> . LParen Param2Op Wft Wfts RParen
    (7) Wft -> . LParen Param1Op Wft Wfts RParen
    (8) Wft -> . LParen Y_Close AtomicNameSet Wft RParen
    (9) Wft -> . LParen Y_Every AtomicName Wfts RParen
    (10) Wft -> . LParen SomeCondition Wfts RParen
    (11) Wft -> . LParen QIdentifier Wfts RParen
    (25) AtomicWft -> . AtomicName
    (26) AtomicWft -> . Y_String
    (27) AtomicWft -> . Y_Integer
    (61) Y_WftNode -> . WftNode
    (28) AtomicName -> . Y_Identifier
    (43) Y_String -> . String
    (44) Y_Integer -> . Integer
    (63) Y_Identifier -> . Identifier

    None            shift and go to state 55
    LParen          shift and go to state 51
    WftNode         shift and go to state 8
    String          shift and go to state 10
    Integer         shift and go to state 11
    Identifier      shift and go to state 12

    Arguments                      shift and go to state 52
    Argument                       shift and go to state 53
    Wft                            shift and go to state 54
    AtomicWft                      shift and go to state 2
    Y_WftNode                      shift and go to state 3
    AtomicName                     shift and go to state 5
    Y_String                       shift and go to state 6
    Y_Integer                      shift and go to state 7
    Y_Identifier                   shift and go to state 9

state 14

    (4) Wft -> LParen BinaryOp . Argument Argument RParen
    (30) Argument -> . Wft
    (31) Argument -> . None
    (32) Argument -> . LParen ArgumentFunction Wfts RParen
    (1) Wft -> . AtomicWft
    (2) Wft -> . Y_WftNode
    (3) Wft -> . LParen Function Arguments RParen
    (4) Wft -> . LParen BinaryOp Argument Argument RParen
    (5) Wft -> . LParen NaryOp Wfts RParen
    (6) Wft -> . LParen Param2Op Wft Wfts RParen
    (7) Wft -> . LParen Param1Op Wft Wfts RParen
    (8) Wft -> . LParen Y_Close AtomicNameSet Wft RParen
    (9) Wft -> . LParen Y_Every AtomicName Wfts RParen
    (10) Wft -> . LParen SomeCondition Wfts RParen
    (11) Wft -> . LParen QIdentifier Wfts RParen
    (25) AtomicWft -> . AtomicName
    (26) AtomicWft -> . Y_String
    (27) AtomicWft -> . Y_Integer
    (61) Y_WftNode -> . WftNode
    (28) AtomicName -> . Y_Identifier
    (43) Y_String -> . String
    (44) Y_Integer -> . Integer
    (63) Y_Identifier -> . Identifier

    None            shift and go to state 55
    LParen          shift and go to state 51
    WftNode         shift and go to state 8
    String          shift and go to state 10
    Integer         shift and go to state 11
    Identifier      shift and go to state 12

    Argument                       shift and go to state 56
    Wft                            shift and go to state 54
    AtomicWft                      shift and go to state 2
    Y_WftNode                      shift and go to state 3
    AtomicName                     shift and go to state 5
    Y_String                       shift and go to state 6
    Y_Integer                      shift and go to state 7
    Y_Identifier                   shift and go to state 9

state 15

    (5) Wft -> LParen NaryOp . Wfts RParen
    (34) Wfts -> .
    (35) Wfts -> . Wfts Wft

    RParen          reduce using rule 34 (Wfts -> .)
    LParen          reduce using rule 34 (Wfts -> .)
    WftNode         reduce using rule 34 (Wfts -> .)
    String          reduce using rule 34 (Wfts -> .)
    Integer         reduce using rule 34 (Wfts -> .)
    Identifier      reduce using rule 34 (Wfts -> .)

    Wfts                           shift and go to state 57

state 16

    (6) Wft -> LParen Param2Op . Wft Wfts RParen
    (1) Wft -> . AtomicWft
    (2) Wft -> . Y_WftNode
    (3) Wft -> . LParen Function Arguments RParen
    (4) Wft -> . LParen BinaryOp Argument Argument RParen
    (5) Wft -> . LParen NaryOp Wfts RParen
    (6) Wft -> . LParen Param2Op Wft Wfts RParen
    (7) Wft -> . LParen Param1Op Wft Wfts RParen
    (8) Wft -> . LParen Y_Close AtomicNameSet Wft RParen
    (9) Wft -> . LParen Y_Every AtomicName Wfts RParen
    (10) Wft -> . LParen SomeCondition Wfts RParen
    (11) Wft -> . LParen QIdentifier Wfts RParen
    (25) AtomicWft -> . AtomicName
    (26) AtomicWft -> . Y_String
    (27) AtomicWft -> . Y_Integer
    (61) Y_WftNode -> . WftNode
    (28) AtomicName -> . Y_Identifier
    (43) Y_String -> . String
    (44) Y_Integer -> . Integer
    (63) Y_Identifier -> . Identifier

    LParen          shift and go to state 4
    WftNode         shift and go to state 8
    String          shift and go to state 10
    Integer         shift and go to state 11
    Identifier      shift and go to state 12

    Wft                            shift and go to state 58
    AtomicWft                      shift and go to state 2
    Y_WftNode                      shift and go to state 3
    AtomicName                     shift and go to state 5
    Y_String                       shift and go to state 6
    Y_Integer                      shift and go to state 7
    Y_Identifier                   shift and go to state 9

state 17

    (29) Function -> Wft .

    None            reduce using rule 29 (Function -> Wft .)
    LParen          reduce using rule 29 (Function -> Wft .)
    WftNode         reduce using rule 29 (Function -> Wft .)
    String          reduce using rule 29 (Function -> Wft .)
    Integer         reduce using rule 29 (Function -> Wft .)
    Identifier      reduce using rule 29 (Function -> Wft .)


state 18

    (7) Wft -> LParen Param1Op . Wft Wfts RParen
    (1) Wft -> . AtomicWft
    (2) Wft -> . Y_WftNode
    (3) Wft -> . LParen Function Arguments RParen
    (4) Wft -> . LParen BinaryOp Argument Argument RParen
    (5) Wft -> . LParen NaryOp Wfts RParen
    (6) Wft -> . LParen Param2Op Wft Wfts RParen
    (7) Wft -> . LParen Param1Op Wft Wfts RParen
    (8) Wft -> . LParen Y_Close AtomicNameSet Wft RParen
    (9) Wft -> . LParen Y_Every AtomicName Wfts RParen
    (10) Wft -> . LParen SomeCondition Wfts RParen
    (11) Wft -> . LParen QIdentifier Wfts RParen
    (25) AtomicWft -> . AtomicName
    (26) AtomicWft -> . Y_String
    (27) AtomicWft -> . Y_Integer
    (61) Y_WftNode -> . WftNode
    (28) AtomicName -> . Y_Identifier
    (43) Y_String -> . String
    (44) Y_Integer -> . Integer
    (63) Y_Identifier -> . Identifier

    LParen          shift and go to state 4
    WftNode         shift and go to state 8
    String          shift and go to state 10
    Integer         shift and go to state 11
    Identifier      shift and go to state 12

    Wft                            shift and go to state 59
    AtomicWft                      shift and go to state 2
    Y_WftNode                      shift and go to state 3
    AtomicName                     shift and go to state 5
    Y_String                       shift and go to state 6
    Y_Integer                      shift and go to state 7
    Y_Identifier                   shift and go to state 9

state 19

    (8) Wft -> LParen Y_Close . AtomicNameSet Wft RParen
    (38) AtomicNameSet -> . AtomicName
    (39) AtomicNameSet -> . LParen AtomicName AtomicNames RParen
    (28) AtomicName -> . Y_Identifier
    (63) Y_Identifier -> . Identifier

    LParen          shift and go to state 60
    Identifier      shift and go to state 12

    AtomicNameSet                  shift and go to state 61
    AtomicName                     shift and go to state 62
    Y_Identifier                   shift and go to state 9

state 20

    (9) Wft -> LParen Y_Every . AtomicName Wfts RParen
    (28) AtomicName -> . Y_Identifier
    (63) Y_Identifier -> . Identifier

    Identifier      shift and go to state 12
